tests/compile_errors/multiple-location.buzz
// Property `name` does not exists
import "buzz:errors";

object Some {
    msg: str,
}

test "Badly initializing an object declared in another file" {
    _ = errors\CompileError{
        name = "wtf",
    };
}
